# trt2023

./: .gitignore  README.md  canny2image_TRT.py  canny2image_TRT_new.py  canny2image_TRT_v2.py  canny2image_torch.py  canny2image_torch_v2.py  compute_score_new.py  compute_score_new_v2.py  compute_score_old.py  compute_score_old_v1.py  compute_score_old_v2.py  models.py  preprocess.sh  test_clip_fp16.py  test_int8_onnx.py  trt_ddim_sampler.py  trt_ddim_sampler_v2.py  utilities.py
plugin/: CMakeLists.txt
plugin/api/: InferPlugin.cpp
plugin/groupNormPlugin/: groupNormPlugin.cpp
plugin/layerNormPlugin/: layerNormPlugin.cpp
plugin/multiHeadCrossAttentionPlugin/: fmhcaPlugin.cpp
plugin/multiHeadFlashAttentionPlugin/: fmhaPlugin.cpp
plugin/seqLen2SpatialPlugin/: seqLen2SpatialPlugin.cpp
plugin/splitGeLUPlugin/: splitGeLUPlugin.cpp
test_imgs/normal/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+154 more)
